# ER-Triage

./: .dockerignore  .gitignore  DEPLOYMENT.md  PRE_SUBMISSION_CHECKLIST.md  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_env.py  test_grader.py  test_inference.py  validation.sh
server/: Dockerfile  ER_Triage_environment.py  __init__.py  app.py
